// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App element produces output containing normal page if logged in 1`] = `
[
  <div
    className="ElApp MuiBox-root css-3j596c"
    id="app1"
  >
    <div
      className="MuiBox-root css-72fd9l"
    >
      <header
        className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-ptdwpq-MuiPaper-root-MuiAppBar-root"
        id="app1.appBar1"
        style={
          {
            "--Paper-shadow": "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
          }
        }
      >
        <div
          className="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-s3ewxw-MuiToolbar-root"
        >
          <div
            className="MuiStack-root css-zqp9gt-MuiStack-root"
          >
            <div
              className="MuiTypography-root MuiTypography-h6 css-lbrw2m-MuiTypography-root"
              style={{}}
            >
              The App bar
            </div>
            <div
              className="MuiStack-root css-bfp4wl-MuiStack-root"
            />
          </div>
        </div>
      </header>
    </div>
    <div
      className="MuiBox-root css-zi2l0h"
    >
      <div
        className="MuiContainer-root MuiContainer-disableGutters css-1x30bt1-MuiContainer-root"
      >
        <div
          className="MuiStack-root ElPage css-1r8j2qy-MuiStack-root"
          id="app1.page1"
          tabIndex={-1}
        >
          <div
            className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
            id="app1.page1.para1"
            style={{}}
          >
            You are logged in
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root css-72fd9l"
    />
  </div>,
  <div
    id="DndDescribedBy-8"
    style={
      {
        "display": "none",
      }
    }
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>,
  <div
    aria-atomic={true}
    aria-live="assertive"
    id="DndLiveRegion-8"
    role="status"
    style={
      {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(100%)",
        "height": 1,
        "margin": -1,
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  />,
]
`;

exports[`App element produces output containing not logged in page if it exists and not logged in 1`] = `
[
  <div
    className="ElApp MuiBox-root css-3j596c"
    id="app1"
  >
    <div
      className="MuiBox-root css-72fd9l"
    >
      <header
        className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-ptdwpq-MuiPaper-root-MuiAppBar-root"
        id="app1.appBar1"
        style={
          {
            "--Paper-shadow": "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
          }
        }
      >
        <div
          className="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-s3ewxw-MuiToolbar-root"
        >
          <div
            className="MuiStack-root css-zqp9gt-MuiStack-root"
          >
            <div
              className="MuiTypography-root MuiTypography-h6 css-lbrw2m-MuiTypography-root"
              style={{}}
            >
              The App bar
            </div>
            <div
              className="MuiStack-root css-bfp4wl-MuiStack-root"
            />
          </div>
        </div>
      </header>
    </div>
    <div
      className="MuiBox-root css-zi2l0h"
    >
      <div
        className="MuiContainer-root MuiContainer-disableGutters css-1x30bt1-MuiContainer-root"
      >
        <div
          className="MuiStack-root ElPage css-1r8j2qy-MuiStack-root"
          id="app1.page1"
          tabIndex={-1}
        >
          <div
            className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
            id="app1.page1.para1"
            style={{}}
          >
            Please log in
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root css-72fd9l"
    />
  </div>,
  <div
    id="DndDescribedBy-6"
    style={
      {
        "display": "none",
      }
    }
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>,
  <div
    aria-atomic={true}
    aria-live="assertive"
    id="DndLiveRegion-6"
    role="status"
    style={
      {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(100%)",
        "height": 1,
        "margin": -1,
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  />,
]
`;

exports[`App element produces output containing page 1`] = `
[
  <div
    className="ElApp MuiBox-root css-3j596c"
    id="app1"
  >
    <div
      className="MuiBox-root css-72fd9l"
    />
    <div
      className="MuiBox-root css-zi2l0h"
    >
      <div
        className="MuiContainer-root MuiContainer-disableGutters css-1x30bt1-MuiContainer-root"
      >
        <div
          className="MuiStack-root ElPage css-1r8j2qy-MuiStack-root"
          id="app1.page1"
          tabIndex={-1}
        >
          <div
            className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
            id="app1.page1.para1"
            style={{}}
          >
            Hello
            <br />
            where are you
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root css-72fd9l"
    />
  </div>,
  <div
    id="DndDescribedBy-0"
    style={
      {
        "display": "none",
      }
    }
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>,
  <div
    aria-atomic={true}
    aria-live="assertive"
    id="DndLiveRegion-0"
    role="status"
    style={
      {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(100%)",
        "height": 1,
        "margin": -1,
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  />,
]
`;

exports[`App element produces output containing page and additional components with app bar at the top 1`] = `
[
  <div
    className="ElApp MuiBox-root css-3j596c"
    id="app1"
  >
    <div
      className="MuiBox-root css-72fd9l"
    >
      <header
        className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-ptdwpq-MuiPaper-root-MuiAppBar-root"
        id="app1.appBar1"
        style={
          {
            "--Paper-shadow": "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
          }
        }
      >
        <div
          className="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-s3ewxw-MuiToolbar-root"
        >
          <div
            className="MuiStack-root css-zqp9gt-MuiStack-root"
          >
            <div
              className="MuiTypography-root MuiTypography-h6 css-lbrw2m-MuiTypography-root"
              style={{}}
            >
              The App bar
            </div>
            <div
              className="MuiStack-root css-bfp4wl-MuiStack-root"
            />
          </div>
        </div>
      </header>
    </div>
    <div
      className="MuiBox-root css-zi2l0h"
    >
      <div
        className="MuiContainer-root MuiContainer-disableGutters css-1x30bt1-MuiContainer-root"
      >
        <div
          className="MuiStack-root ElPage css-1r8j2qy-MuiStack-root"
          id="app1.page1"
          tabIndex={-1}
        >
          <div
            className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
            id="app1.page1.para1"
            style={{}}
          >
            Hello
            <br />
            where are you
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root css-72fd9l"
    >
      <div
        id="app1.coll1"
      >
        <div>
          app1.coll1
        </div>
        <code>
          {}
        </code>
      </div>
      <div
        id="app1.coll2"
      >
        <div>
          app1.coll2
        </div>
        <code>
          {}
        </code>
      </div>
    </div>
  </div>,
  <div
    id="DndDescribedBy-3"
    style={
      {
        "display": "none",
      }
    }
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>,
  <div
    aria-atomic={true}
    aria-live="assertive"
    id="DndLiveRegion-3"
    role="status"
    style={
      {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(100%)",
        "height": 1,
        "margin": -1,
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  />,
]
`;

exports[`App element produces output with cookie message 1`] = `
[
  <div
    className="ElApp MuiBox-root css-3j596c"
    id="app1"
  >
    <div
      className="MuiBox-root css-72fd9l"
    />
    <div
      className="MuiBox-root css-zi2l0h"
    >
      <div
        className="MuiContainer-root MuiContainer-disableGutters css-1x30bt1-MuiContainer-root"
      >
        <div
          className="MuiStack-root ElPage css-1r8j2qy-MuiStack-root"
          id="app1.page1"
          tabIndex={-1}
        >
          <div
            className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
            id="app1.page1.para1"
            style={{}}
          >
            Hello
            <br />
            where are you
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root css-72fd9l"
    />
    <div
      className="CookieConsent"
      style={
        {
          "alignItems": "baseline",
          "background": "#353535",
          "backgroundColor": "#1976d2",
          "bottom": "0",
          "color": "white",
          "display": "flex",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "left": "5px",
          "position": "fixed",
          "width": "calc(100% - 10px)",
          "zIndex": "999",
        }
      }
    >
      <div
        className=""
        style={
          {
            "flex": "1 0 300px",
            "margin": "15px",
          }
        }
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
          style={{}}
        >
          We love cookies
        </p>
      </div>
      <div
        className=""
      >
        <button
          aria-label="Accept cookies"
          className=""
          id="rcc-confirm-button"
          onClick={[Function]}
          style={
            {
              "background": "#ffd42d",
              "backgroundColor": "#16f316",
              "border": "0",
              "borderRadius": "5px",
              "boxShadow": "none",
              "color": "black",
              "cursor": "pointer",
              "flex": "0 0 auto",
              "margin": "15px",
              "padding": "5px 10px",
            }
          }
        >
          OK
        </button>
        <button
          aria-label="Decline cookies"
          className=""
          id="rcc-decline-button"
          onClick={[Function]}
          style={
            {
              "background": "#c12a2a",
              "backgroundColor": "#dd3535",
              "border": "0",
              "borderRadius": "5px",
              "boxShadow": "none",
              "color": "white",
              "cursor": "pointer",
              "flex": "0 0 auto",
              "margin": "15px",
              "padding": "5px 10px",
            }
          }
        >
          Not Ok
        </button>
      </div>
    </div>
  </div>,
  <div
    id="DndDescribedBy-10"
    style={
      {
        "display": "none",
      }
    }
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>,
  <div
    aria-atomic={true}
    aria-live="assertive"
    id="DndLiveRegion-10"
    role="status"
    style={
      {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(100%)",
        "height": 1,
        "margin": -1,
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  />,
]
`;

exports[`App element produces output with max width 1`] = `
[
  <div
    className="ElApp MuiBox-root css-3j596c"
    id="app1"
  >
    <div
      className="MuiBox-root css-72fd9l"
    />
    <div
      className="MuiBox-root css-zi2l0h"
    >
      <div
        className="MuiContainer-root MuiContainer-disableGutters css-1fgx08c-MuiContainer-root"
      >
        <div
          className="MuiStack-root ElPage css-1r8j2qy-MuiStack-root"
          id="app1.page1"
          tabIndex={-1}
        >
          <div
            className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
            id="app1.page1.para1"
            style={{}}
          >
            Hello
            <br />
            where are you
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root css-72fd9l"
    />
  </div>,
  <div
    id="DndDescribedBy-1"
    style={
      {
        "display": "none",
      }
    }
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>,
  <div
    aria-atomic={true}
    aria-live="assertive"
    id="DndLiveRegion-1"
    role="status"
    style={
      {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(100%)",
        "height": 1,
        "margin": -1,
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  />,
]
`;
